<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GuessActivity">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:gravity="center"
        android:hint="Insert Number"
        android:inputType="number"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/btnCheck"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/kavoon"
        android:gravity="center"
        android:text="0. The random number is smaller than 100."
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/chance"
        android:textColor="@color/colorDarkPurple"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGiveUp"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/btnGiveUp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnCheck"
        app:layout_constraintStart_toStartOf="@+id/btnCheck"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />

    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/slackey"
        android:text="@string/history"
        android:textColor="@color/colorDarkBlue"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/hint"
        app:layout_constraintEnd_toEndOf="@+id/hint"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>